// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders custom styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 28px;
  width: 28px;
  border-radius: 50%;
  cursor: pointer;
  -webkit-transition: 200ms ease-out;
  transition: 200ms ease-out;
}

.c0:hover,
.c0:focus,
.c0:active {
  background: rgba(0,0,0,0.1);
  color: #000;
}

<div
  className="c0"
  display="flex"
  height="28px"
  width="28px"
/>
`;

exports[`it renders default styles 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  cursor: pointer;
  -webkit-transition: 200ms ease-out;
  transition: 200ms ease-out;
}

.c0:hover,
.c0:focus,
.c0:active {
  background: rgba(0,0,0,0.1);
  color: #000;
}

<div
  className="c0"
  display="flex"
  height="40px"
  width="40px"
/>
`;
